集成flyway框架，添加h2内存数据库，新增用户表添加默认用户信息，完成用户登录逻辑。

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -109,7 +109,7 @@
 				}
 
 				var jsonData = {};
-				jsonData["username"] = $("#username").val();
+				jsonData["userid"] = $("#username").val();
 				jsonData["password"] = $.md5($("#password").val());
 				$.ajax({
 							"type" : "POST",
@@ -120,7 +120,7 @@
 							"cache" : false,
 							"success" : function(result) {
 								console.info(result);
-								if (result.SUCCESS) {
+								if (result.success) {
 									if ($.browser.msie)
 										window.location.href = 'platform/main.html';
 									else
