--- a/src/main/webapp/platform/main.html
+++ b/src/main/webapp/platform/main.html
@@ -1,1 +1,167 @@
-登录成功
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../theme/default/main.css" >
+    <link rel="stylesheet" href="../theme/default/left-menu.css" >
+
+    <title>Hello, WaBoot!</title>
+</head>
+<body>
+
+<div id="header">
+    <div class="container-fluid">
+        <div class="navbar">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">
+                    <i><img src=""></i>
+                </a>
+            </div>
+            <nav class="top-nav" role="navigation">
+                <ul class="nav navbar-nav pull-left">
+                    <li id="toggle-sidebar-li" title="菜单收起">
+                        <a href="#" id="toggle-sidebar"><i class="glyphicon glyphicon-circle-arrow-left"></i> </a>
+                    </li>
+                    <li title="全屏">
+                        <a href="#" class="full-screen"><i class="fa-fullscreen"></i></a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav pull-right">
+                    <li><a href="#"> Hi !&nbsp;&nbsp;<span id="head-userName"></span></a></li>
+                    <li class="dropdown"></li>
+                    <li class="dropdown" title="退出">
+                        <a href="#" id="logouts"><i class="st-enter"></i> </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <!-- Start #header-area -->
+        <div id="header-area" class="fadeInDown">
+            <div class="header-area-inner"></div>
+        </div>
+    </div>
+</div>
+
+<div id="sidebar" class="sidebar-fixed">
+    <ul id="accordion" class="accordion">
+        <li>
+            <div class="link"><i class="fa fa-leaf"></i>产品管理<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+                <li id="shop"><a href="#">查看店铺</a></li>
+                <li id="publicproducts"><a href="#">发布产品</a></li>
+                <li id="productlists"><a href="#">查看产品</a></li>
+                <li id="mysaled"><a href="#">已卖出产品</a></li>
+            </ul>
+        </li>
+        <li>
+            <div class="link"><i class="fa fa-shopping-cart"></i>采购管理<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+                <li id="publishpurchase"><a href="#">发布采购</a></li>
+                <li id="postneeds"><a href="#">查看采购</a></li>
+                <li id="getneeds"><a href="#">已收到的报价单</a></li>
+                <li id="mypricesheet"><a href="#">我的报价单</a></li>
+                <li id="concernshop"><a href="#">已关注的店铺</a></li>
+                <li id="concerngood"><a href="#">已关注的商品</a></li>
+            </ul>
+        </li>
+        <li>
+            <div class="link"><i class="fa fa-pencil-square-o"></i>询盘管理<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+                <li id="buyerxunpanlist"><a href="#">收到的询盘</a></li>
+                <li id="publishrequire"><a href="#">我的询盘</a></li>
+            </ul>
+        </li>
+        <li>
+            <div class="link"><i class="fa fa-file-text"></i>订单管理<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+                <li id="myorder"><a href="#">我的订单</a></li>
+                <li id="myrefund"><a href="#">退款申请</a></li>
+            </ul>
+        </li>
+        <li>
+            <div class="link"><i class="fa fa-globe"></i>金融管理<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+                <li id="myloan"><a href="#">我的借贷</a></li>
+                <li id="financialmanage"><a href="#">需求申请</a></li>
+                <li id="myapplication"><a href="#">我的申请</a></li>
+            </ul>
+        </li>
+        <li>
+            <div class="link"><i class="fa fa-unlock-alt"></i>安全管理<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+                <li id="basecomInfo"><a href="#">基本信息</a></li>
+                <li id="authenchange"><a href="#">认证信息</a></li>
+                <li id="phoneAuth"><a href="#">手机认证</a></li>
+                <li id="bankCardAuth"><a href="#">银行卡认证</a></li>
+                <li id="emailAuth"><a href="#">邮箱认证</a></li>
+                <li id="passwordmodify"><a href="#">密码修改</a></li>
+                <li id="paymentpsdmodify"><a href="#">支付密码</a></li>
+                <li id="address"><a href="#">收货地址</a></li>
+            </ul>
+        </li>
+        <li>
+            <div class="link"><i class="fa fa-star"></i>评价管理<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+                <li id="usercomments"><a href="#">我的评价</a></li>
+            </ul>
+        </li>
+        <li>
+            <div class="link"><i class="fa fa-bell"></i>消息管理<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+                <li id="mymsg"><a href="#">我的消息</a></li>
+            </ul>
+        </li>
+        <!-- 视情况而定 -->
+        <li>
+            <div class="link"><i class="fa fa-signal"></i>统计管理<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+                <li id="censusmanager"><a href="#">月贸易量</a></li>
+                <li id="statisticmanager"><a href="#">月订单量</a></li>
+            </ul>
+        </li>
+        <li>
+            <div class="link"><i class="fa fa-credit-card"></i>白条管理<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+                <li id="oweindex"><a href="#">开通白条</a></li>
+                <li id="myIous"><a href="#">我的白条</a></li>
+                <li id="louorderlist"><a href="#">订单列表</a></li>
+            </ul>
+        </li>
+    </ul>
+
+</div>
+
+<div id="content" class="sidebar-page">
+    <div class="content-wrapper">
+        <div class="right">
+            <!-- 主交易区域 -->
+            <div id="mainContent" class="sub-content ">内容区域</div>
+
+            <!-- 跳转区域 -->
+            <div id="linkContent" class="sub-content hide"></div>
+
+            <!-- 弹出交易区域 -->
+            <div id="popContent" class="sub-content hide"></div>
+
+        </div>
+    </div>
+</div>
+
+<link rel="stylesheet" type="text/css" href="../theme/default/css/font-awesome.min.css">
+
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="common/app.js"></script>
+<script src="common/main.js"></script>
+
+<script src="lib/jquery.slimscroll.js"></script>
+<script type="text/javascript" >
+    $(document).trigger('appReady');
+</script>
+
+</body>
+</html>
